--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-cloudinary": "^5.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3"
   },
