--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@auth/prisma-adapter": "^1.1.0",
+    "@prisma/client": "^5.9.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@uploadthing/react": "^6.2.2",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.16.5",
+    "lucide-react": "^0.320.0",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "next-cloudinary": "^5.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-intersection-observer": "^9.5.3",
+    "uploadthing": "^6.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
