--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.9.0",
     "@supabase/supabase-js": "^2.39.0",
     "@uploadthing/react": "^6.2.2",
+    "bcrypt": "^5.1.1",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.16.5",
