--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.1.0",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.0",
     "@supabase/supabase-js": "^2.39.0",
     "@uploadthing/react": "^6.2.2",
     "bcrypt": "^5.1.1",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
-    "framer-motion": "^10.16.5",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.320.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
