--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
+    "react-to-print": "^2.15.1",
     "uploadthing": "^6.3.1"
   },
   "devDependencies": {
