--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@auth/prisma-adapter": "^1.1.0",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.0",
+    "@react-email/components": "0.0.15",
     "@supabase/supabase-js": "^2.39.0",
     "@uploadthing/react": "^6.2.2",
+    "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
@@ -25,12 +27,15 @@
     "next-cloudinary": "^5.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-to-print": "^2.15.1",
-    "uploadthing": "^6.3.1"
+    "resend": "3.2.0",
+    "uploadthing": "^6.3.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
