--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-email/components": "0.0.15",
     "@supabase/supabase-js": "^2.39.0",
     "@uploadthing/react": "^6.2.2",
+    "@web3forms/react": "^1.1.3",
     "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
     "flowbite": "^2.1.1",
@@ -28,7 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "2.1.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
