--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "@auth/prisma-adapter": "^1.1.0",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "0.0.15",
     "@supabase/supabase-js": "^2.39.0",
+    "@tanstack/react-table": "^8.14.0",
     "@uploadthing/react": "^6.2.2",
     "@web3forms/react": "^1.1.3",
     "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.18.0",
@@ -34,7 +41,10 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-to-print": "^2.15.1",
+    "recharts": "^2.12.3",
     "resend": "3.2.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.3.1",
     "uuid": "^9.0.1"
   },
