--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
+    "migrate:create": "prisma migrate dev --create-only",
+    "migrate": "prisma migrate dev",
+    "migrate:prod": "prisma migrate deploy",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.1.0",
     "@nextui-org/react": "^2.2.9",
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "^5.13.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "0.0.15",
     "@supabase/supabase-js": "^2.39.0",
@@ -56,7 +63,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "prisma": "^5.9.0",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
