--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.15",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-table": "^8.14.0",
@@ -40,6 +46,7 @@
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
     "framer-motion": "^10.18.0",
+    "geist": "^1.3.0",
     "lucide-react": "^0.320.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
@@ -59,7 +66,9 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.3.1",
     "uuid": "^9.0.1",
-    "zod": "^3.23.8"
+    "vaul": "^0.9.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
