--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
