--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.1.0",
+    "@headlessui/react": "^2.0.4",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/resolvers": "^3.5.0",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.13.0",
@@ -32,8 +34,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.15",
+    "@remixicon/react": "^4.2.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-table": "^8.14.0",
+    "@tremor/react": "^3.17.2",
     "@uploadthing/react": "^6.2.2",
     "@web3forms/react": "^1.1.3",
     "base64url": "^3.0.1",
@@ -71,6 +75,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
